--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,14 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Event Manager</a>
+        <a class="navbar-brand ms-3" href="{% url "dashboard" %}">Event Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            {% comment %} <span class="navbar-toggler-icon"></span> {% endcomment %}
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Home</a>
+                    <a class="nav-link" href="{% url "dashboard" %}">Home</a>
                 </li>
             </ul>
             
@@ -30,10 +30,8 @@
             {% else %}
             <p class="mt-3 me-4">Hello, {{ user.email }} </p>
             {% endif %}
-            <a href="{% url 'logout' %}" class="btn btn-danger btn-sm me-2">Logout</a></p>
+            <a href="{% url 'logout' %}" class="btn btn-primary btn-sm me-4">Logout</a></p>
             {% endif %}
-
-    
     </nav>
     <div class="container mt-4">
     {% if messages %}
