--- a/event_manager/templates/events/event_list.html
+++ b/event_manager/templates/events/event_list.html
@@ -1,7 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="mb-4">Available Event</h1>
+<h1 class="mb-4">Available Events</h1>
+
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6">
+                <form method="get" class="d-flex">
+                    <input class="form-control me-2" type="text" name="search" value="{{ search_query }}" placeholder="Search events using keyword Title, Event Location...">
+                    <button class="btn btn-success" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-md-6 text-end">
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
 {% for event in events %}
 <div class="col-md-3 col-lg-3 col-sm-6">
