--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "dashboard" %}">Home</a>
+                    <a class="nav-link" href="{% url "dashboard" %}">Dashboard</a>
                 </li>
             </ul>
             
